--- a/BLL/App.config
+++ b/BLL/App.config
@@ -1,12 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <appSettings>
-    <add key="Server" value="(LocalDb)\LocalDB"/>
-    <add key="Database" value="Account_Client"/>
-    <add key="Trusted_Connection" value="True"/>
-
+    <add key="Server" value="(LocalDb)\LocalDB" />
+    <add key="Database" value="Account_Client" />
+    <add key="Trusted_Connection" value="True" />
   </appSettings>
+  <connectionStrings>
+    <add name="Account_ClientEntities" connectionString="metadata=res://*/Data.AccountClient.csdl|res://*/Data.AccountClient.ssdl|res://*/Data.AccountClient.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\LocalDB;initial catalog=Account_Client;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
